<resources>
    <string name="app_name">CookEat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Cook\'eat</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Accueil</string>

    <string name="menu_recipe">Recette</string>
    <string name="menu_slideshow">En cours</string>
    <string name="menu_tools">Parameter</string>

    <string name="recipe_advice">Conseil</string>
    <string name="recipe_favorite">Vos favoris</string>
    <string name="recipe_random">Aléatoire</string>
    <string name="recipe_prev">Précédent</string>
    <string name="recipe_add_fav">Ajouter favoris</string>
    <string name="recipe_next">Suivant</string>

    <string name="recipe_detail_ingredient">Ingrédients</string>
    <string name="recipe_detail_step">Voir étapes</string>
    <string name="recipe_detail_begin">Commencer</string>

    <string name="timer">Timer</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="remove_favorite">Retirer favoris</string>
    <string name="add_favorite">Ajouter favoris</string>


    <string name="team_selection">Voici la recette du jour de notre équipe :</string>
    <string name="home_recipe_card">home_fragment_card</string>


</resources>
