<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.helloworld.cookeat.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.helloworld.cookeat.ui.recipe.RecipeFragment"
        android:label="@string/menu_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/nav_tools"
        android:name="com.helloworld.cookeat.ui.parameter.ParamaterFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_parameter" />

</navigation>