<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.RecipeDetailActivity">

    <Button
        android:id="@+id/ingredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/recipe_detail_ingredient"
        app:layout_constraintBottom_toTopOf="@+id/recipePicture"
        app:layout_constraintEnd_toStartOf="@+id/stepButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/stepButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/recipe_detail_step"
        app:layout_constraintBottom_toTopOf="@+id/recipePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/beginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginBottom="50dp"
        android:text="@string/recipe_detail_begin"
        app:layout_constraintBottom_toTopOf="@+id/recipePicture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toEndOf="@+id/stepButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/recipePicture"
        android:layout_width="332dp"
        android:layout_height="286dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/backgrounds/scenic" />

    <TextView
        android:id="@+id/recipeDetails"
        android:layout_width="326dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipePicture" />

    <TextView
        android:id="@+id/recipeName"
        android:layout_width="410dp"
        android:layout_height="71dp"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/stepButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>